[package]
name = "ag-lcd"
version = "0.1.2"
authors = ["Michael House <mjhouse@protonmail.com>"]
keywords = [ "arduino", "avr-hal", "lcd", "HD44780", "LiquidCrystal" ]
categories = ["embedded","hardware-support"]
description = "A rust port of the LiquidCrystal arduino library"
repository = "https://github.com/mjhouse/ag-lcd"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"
exclude = ["media/*", "references/*"]

[dependencies]
embedded-hal = "0.2.3"
ufmt = { version = "0.1.0", optional = true }

[features]
avr-hal = []