[package]
name = "ag-lcd"
version = "0.3.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
keywords = [ "arduino", "lcd", "HD44780", "LiquidCrystal", "i2c" ]
categories = ["embedded","hardware-support"]
description = "A rust port of the LiquidCrystal arduino library"
repository = "https://github.com/mjhouse/ag-lcd"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"
exclude = ["media/*", "references/*"]

[dependencies]
embedded-hal = "1.0.0"
ufmt = { version = "0.1.0", optional = true }
port-expander = { version = "0.6.2", optional = true }
shared-bus = "0.2"

[features]
avr-hal = []
i2c = ["port-expander"]

[package.metadata.docs.rs]
features = ["i2c"]