[package]
name = "ag-lcd-character"
version = "0.1.2"
authors = ["Michael House <mjhouse@protonmail.com>"]
description = "An example of the ag-lcd library"
repository = "https://github.com/mjhouse/ag-lcd"
license = "GPL-3.0-or-later"
edition = "2018"
readme = "README.md"

[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "8ad1be6d95b075d", features = ["arduino-nano"] }
ag-lcd = { path = "../../../", features = ["avr-hal"] }
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"