[package]
name = "ag-lcd-i2c-print"
version = "0.2.0"
authors = ["Victor Nilsson @vcrn"]
description = "An example of the ag-lcd library"
repository = "https://github.com/mjhouse/ag-lcd"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"

[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "84af1c72693893449cf93b6a4449df58c57c21e6", features = ["arduino-nano"] }
ag-lcd = { path = "../../../", features = ["i2c"] }
panic-halt = "0.2.0"
port-expander = "0.3.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
