[package]
name = "ag-lcd-scroll"
version = "0.1.2"
authors = ["Michael House <mjhouse@protonmail.com>"]
description = "An example of the ag-lcd library"
repository = "https://github.com/mjhouse/ag-lcd"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"

[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "84af1c72693893449cf93b6a4449df58c57c21e6", features = ["arduino-nano"] }
ag-lcd = { path = "../../../" }
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"