[package]
name = "ag-lcd-print"
version = "0.1.0"
authors = ["Victor Nilsson @vcrn"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ag-lcd-print"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
ag-lcd = { path = "../../../" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "84af1c72693893449cf93b6a4449df58c57c21e6"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
