[package]
name = "ag-lcd-uno-two-lines"
version = "0.1.0"
authors = ["Victor Nilsson @vcrn"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ag-lcd-uno-two-lines"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
ag-lcd = "0.1.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
