[package]
name = "ag-lcd-uno-two-lines"
version = "0.1.0"
authors = ["Victor Nilsson @vcrn"]
description = "An example of the ag-lcd library"
repository = "https://github.com/mjhouse/ag-lcd"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"

[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "1aacefb335517f85d0de858231e11055d9768cdf", features = ["arduino-uno"] }
ag-lcd = { path = "../../../", features = ["avr-hal"] }
panic-halt = "0.2.0"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
